dnl Process this file with autoconf to produce a configure script.
AC_INIT(f_wrappers.c)

dnl Workaround for bizarre behavior of deleting VPATH from Makefile
VPATH=VPATH
AC_SUBST(VPATH)

dnl Determine C compiler
UD_PROG_CC

dnl Set the default prefix (for installing the library) to $(HOME)/lib
AC_PREFIX_DEFAULT($HOME)
AC_SUBST(prefix)

dnl Checks for programs.
AC_PROG_CPP
AC_CHECK_PROG(AR, ar, ar, :)

dnl If ranlib exists, use it in the Makefile
AC_PROG_RANLIB
case $RANLIB in
  ranlib*)
    RANLIB="$RANLIB \$@"
    ;;
esac
    
AC_SUBST(RANLIB)

dnl Checks for header files.
AC_HEADER_STDC
dnl AC_CHECK_HEADERS(limits.h strings.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME

dnl Get architecture
UD_GET_ARCH
ARCHDEF="-D${ARCH}"
AC_SUBST(ARCHDEF)

dnl Check for library functions.
dnl AC_DEFINE will set cpp variables if found
AC_CHECK_FUNC(times, AC_DEFINE(HAVE_TIMES))

dnl Check for threading options.  If both omp and pthreads are chosen in error,
dnl arbitrarily give omp preference

AC_ARG_ENABLE(omp, omp enables thread-safe behavior using OpenMP, AC_DEFINE(THREADED_OMP))
  
AC_ARG_ENABLE(pthreads, pthreads enables thread-safe behavior using pthreads,
  AC_CHECK_HEADER(pthread.h, AC_DEFINE(THREADED_PTHREADS), 
    AC_MSG_ERROR("Rerun configure without --enable-pthreads")))

AC_ARG_ENABLE(pcl, pcl enables linking with the PCL library to get detailed low level info,
  AC_CHECK_HEADER(pcl.h, AC_DEFINE(HAVE_PCL), 
    AC_MSG_ERROR("Rerun configure without --enable-pcl")))

AC_CHECK_LIB(pcl, PCLinit, PCL=-lpcl, PCL=)
AC_SUBST(PCL)

dnl Checks for Fortran compiler
UD_PROG_FC

dnl Checks type of Fortran names for C interface
PAC_GET_FORTNAMES
AC_SUBST(CFLAGS)
AC_SUBST(FFLAGS)

dnl VPATH currently doesn't work with configure so comment out for now
dnl AC_OUTPUT(${ARCH}/Makefile tests/${ARCH}/Makefile)
AC_OUTPUT(Makefile tests/Makefile)
