# These executables may have been built depending on args to configure
dist_man_MANS = man1/gptl_avail.1 \
                man1/gran_overhead.1 \
                man1/print_mpistatus_size.1

# These are the publicly available APIs for GPTL
dist_man_MANS += man3/GPTL.3 \
                 man3/GPTLbarrier.3 \
                 man3/GPTLdisable.3 \
                 man3/GPTLenable.3 \
                 man3/GPTLevent_code_to_name.3 \
                 man3/GPTLevent_name_to_code.3 \
                 man3/GPTLfinalize.3 \
                 man3/GPTLget_eventvalue.3 \
                 man3/GPTLget_memusage.3 \
                 man3/GPTLget_nregions.3 \
                 man3/GPTLget_procsiz.3 \
                 man3/GPTLget_regionname.3 \
                 man3/GPTLget_threadwork.3 \
                 man3/GPTLget_wallclock.3 \
                 man3/GPTLget_wallclock_latest.3 \
                 man3/GPTLinit_handle.3 \
                 man3/GPTLinitialize.3 \
                 man3/GPTLnum_errors.3 \
                 man3/GPTLnum_warn.3 \
                 man3/GPTL_PAPIlibraryinit.3 \
                 man3/GPTLpr.3 \
                 man3/GPTLpr_file.3 \
                 man3/GPTLprint_memusage.3 \
                 man3/GPTLprocess_namelist.3 \
                 man3/GPTLpr_summary.3 \
                 man3/GPTLpr_summary_file.3 \
                 man3/GPTLquery.3 \
                 man3/GPTLreset.3 \
                 man3/GPTLreset_timer.3 \
                 man3/GPTLsetoption.3 \
                 man3/GPTLsetutr.3 \
                 man3/GPTLstamp.3 \
                 man3/GPTLstart.3 \
                 man3/GPTLstart_handle.3 \
                 man3/GPTLstartstop_val.3 \
                 man3/GPTLstop.3 \
                 man3/GPTLstop_handle.3

EXTRA_DIST = $(dist_man_MANS)
