## This is a automake file, part of the GPTL package.
# Copyright 2018, see the COPYRIGHT file for more information.

# This is the automake file for GPTL source code directories.
# Ed Hartnett, 5/18/18

AM_CPPFLAGS = -I$(top_srcdir)/include 

# Test programs to be built.
#check_PROGRAMS = ???.c

# Tests to be run.
#TESTS = ???

# Test output to be deleted.
#CLEANFILES = ???
